--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.546.0",
     "natural": "^8.1.0",
     "next": "16.0.0",
+    "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stopword": "^3.1.5",
