--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@mozilla/readability": "^0.6.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/jsdom": "^27.0.0",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
